--- a/styles/sass/_main-screen.scss
+++ b/styles/sass/_main-screen.scss
@@ -52,13 +52,17 @@
           height: $elementSize;
           padding: 8px;
           text-align: center;
+          position: relative;
 
           .icon {
-            max-width: calc(100% - 10px);
-            max-height: calc(100% - 10px);
-            margin: 5px;
+            max-width: calc(100% - 10px - 16px);
+            max-height: calc(100% - 10px - 16px);
             cursor: pointer;
-            display: inline-block;
+            display: block;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
 
             &.selectable:hover {
               // TODO: might want to convert these to SVGs
